inklecate_v0.8.3_I048_stderr.txt
  File "/home/runner/work/ink-proof/ink-proof/drivers/inklecate_v0.8.3_compiler_driver", line 20
    if [[ "$(uname)" == 'Darwin' ]]; then
                                   ^
SyntaxError: invalid syntax
